# oh-procd

./: Cargo.toml  README.md  Taskfile.yml  config.yaml  hello.sh  procd.yaml  procd.yml
.github/workflows/: ci.yml
src/: config.rs  logger.rs  main.rs
src/api/: auth.rs  handlers.rs
src/api/asset/: index.html
src/process/: logger.rs  mod.rs  registry.rs  supervisor.rs
