[package]
name = "oh-procd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0",  features = ["derive"] }
serde_yaml = "0.9.33"
chrono = "0.4"
tracing-appender = "0.2.4"
tokio-util = "0.7.18"
anyhow = "1.0.101"
tower-http = {version = "0.6.8", features = ["trace"]}
tracing = "0.1.44"
tracing-subscriber = {version="0.3.22", features=["env-filter"]}
nix = {version="0.31.1", features = ["signal", "process"] }
windows-sys = "0.61.2"
config = "0.15.19"
clap = { version = "4.5.57", features = ["derive"] }
base64 = "0.22.1"
humantime-serde = "1.1.1"
libc = "0.2.180"


[profile.release]
lto = true          # Link Time Optimization
codegen-units = 1   # 减少生成单元，提高优化空间
opt-level = "z"     # "z" 优化体积，"s" 优化大小，默认 "3" 优化速度
